--- a/assets/sass/index.css
+++ b/assets/sass/index.css
@@ -64,3 +64,149 @@ body {
 *::-o-scrollbar {
   width: 0px !important;
 }
+
+body {
+  background: #eee;
+  --back: #403936;
+}
+
+header {
+  background: var(--back);
+  width: 100%;
+  padding: 2.3rem 2.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+@media (max-width: 375px) {
+  header {
+    width: 100%;
+    padding: 2.3rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+}
+
+header div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 3rem;
+}
+
+header div span {
+  display: inline-block;
+}
+
+header div span.toggle {
+  width: 50px;
+  cursor: pointer;
+}
+
+header div span.toggle strong {
+  margin: 0 0 1px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 0.3fr 1fr;
+  grid-gap: 0.1rem;
+}
+
+header div span.toggle strong i {
+  padding: 2px;
+  background: #fff;
+  display: inline-block;
+}
+
+header div span.toggle strong:last-child {
+  top: 2px;
+  display: grid;
+  grid-template-columns: 1fr 0.3fr;
+  grid-gap: 0.1rem;
+}
+
+header div span.a_ {
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: .9rem;
+  letter-spacing: 1.0px;
+  vertical-align: middle;
+}
+
+header div span.a_ i {
+  top: .0rem;
+  font-size: .7rem;
+  position: relative;
+}
+
+header h1 {
+  color: #fff;
+  font-family: Linotte;
+}
+
+header nav {
+  display: inline-block;
+}
+
+header nav ul {
+  float: left;
+}
+
+header nav ul li {
+  margin: 0 0 0 1rem;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+header nav ul li a {
+  color: #fff;
+}
+
+header nav ul li a i {
+  font-size: 1.1rem;
+}
+
+header nav span {
+  color: #fff;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  padding: 0 0 0 1rem;
+}
+
+section {
+  height: 100vh;
+  width: 100%;
+  padding: 2.3rem 2.8rem;
+  position: relative;
+  background: var(--back);
+  border-top: .1px solid #999;
+}
+
+@media (max-width: 375px) {
+  section {
+    width: 100%;
+    padding: 2.3rem 1rem;
+  }
+}
+
+section .stact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+section .stact span {
+  color: #fff;
+  font-size: .8rem;
+  letter-spacing: 1.5px;
+}
